--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
         "build": "tsc",
         "twins-start": "node dist/twins.js",
         "start": "node dist/index.js",
-        "check": "tsc --noEmit"
+        "check": "tsc --noEmit",
+        "fmt": "prettier --write ."
     },
     "dependencies": {
         "dotenv": "^17.0.1",
@@ -15,6 +16,7 @@
     },
     "devDependencies": {
         "@types/node": "^22.15.29",
+        "prettier": "^3.6.2",
         "typescript": "^5.8.3"
     }
 }
