--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
         "twins-start": "node dist/twins.js",
         "start": "node dist/index.js",
         "check": "tsc --noEmit",
-        "fmt": "prettier --write ."
+        "fmt": "prettier --write .",
+        "lint": "eslint ./src --ext .ts"
     },
     "dependencies": {
         "csv-parse": "^6.1.0",
@@ -17,6 +18,9 @@
     },
     "devDependencies": {
         "@types/node": "^22.15.29",
+        "@typescript-eslint/eslint-plugin": "^8.50.0",
+        "@typescript-eslint/parser": "^8.50.0",
+        "eslint": "^9.39.2",
         "prettier": "^3.6.2",
         "typescript": "^5.8.3"
     }
