--- a/package.json
+++ b/package.json
@@ -5,16 +5,14 @@
         "twins-start": "node dist/twins.js",
         "start": "node dist/index.js",
         "check": "tsc --noEmit",
-        "fmt": "prettier --write .",
+        "fmt": "prettier --write ./src",
         "lint": "eslint ./src --ext .ts"
     },
     "dependencies": {
         "csv-parse": "^6.1.0",
         "dotenv": "^17.0.1",
-        "rehype-parse": "^9.0.1",
-        "ts-node": "^10.9.2",
-        "unified": "^11.0.5",
-        "unist-util-visit": "^5.0.0"
+        "parse5": "^8.0.0",
+        "ts-node": "^10.9.2"
     },
     "devDependencies": {
         "@types/node": "^22.15.29",
