--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     },
     "dependencies": {
         "csv-parse": "^6.1.0",
+        "diff": "^8.0.2",
         "dotenv": "^17.0.1",
         "parse5": "^8.0.0",
         "ts-node": "^10.9.2"
